--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "jquery-bar-rating": "^1.2.2",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
     "turbolinks": "^5.2.0",
